force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__ActualLastPtcpFirstVisitDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualLastPtcpFirstVisitDate__c</fullName>
    <label>Actual Last Ptcp First Visit Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualLastPtcpFirstVisitDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>