force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__ActualPtcpEnrollmentDrtnNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualPtcpEnrollmentDrtnNumber__c</fullName>
    <label>Actual Participant Enrollment Duration</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualPtcpEnrollmentDrtnNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>