force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__CareProgramSite_TeamId_map_Team_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__CareProgramSite_TeamId_map_Team_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramSite_TeamId_map_Team_Id_N_1</label>
    <referenceTo>ssot__Team__dlm</referenceTo>
    <relationshipLabel>CareProgramSite_TeamId_map_Team_Id_N_1</relationshipLabel>
    <relationshipName>CareProgramSite_TeamId_map_Team_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>