force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__ForecastedLastPtcpLastVisitDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ForecastedLastPtcpLastVisitDate__c</fullName>
    <label>Forecasted Last Ptcp Last Visit Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ForecastedLastPtcpLastVisitDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>