force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__PredictedPtcpEnrollmentRate__c.field-meta.xml
<CustomField>
    <fullName>ssot__PredictedPtcpEnrollmentRate__c</fullName>
    <label>Predicted Participant Enrollment Rate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PredictedPtcpEnrollmentRate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>