force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__ProjectedPtcpEnrlCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProjectedPtcpEnrlCount__c</fullName>
    <label>Projected Participant Enrollment Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProjectedPtcpEnrlCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>