force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__QualVisitToInitVisitDrtnNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__QualVisitToInitVisitDrtnNumber__c</fullName>
    <label>Qual Visit To Initiation Visit Drtn</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QualVisitToInitVisitDrtnNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>