force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__rel_1723127948009_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723127948009_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramSite_SiteId_map_Healthcar_rel</label>
    <referenceTo>ssot__HealthcareFacility__dlm</referenceTo>
    <relationshipLabel>CareProgramSite_SiteId_map_Healthcar_rel</relationshipLabel>
    <relationshipName>rel_1723127948009_end</relationshipName>
    <type>Lookup</type>
</CustomField>