force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__rel_1723128536922_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128536922_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramSite_SiteId_map_Location__rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>CareProgramSite_SiteId_map_Location__rel</relationshipLabel>
    <relationshipName>rel_1723128536922_end</relationshipName>
    <type>Lookup</type>
</CustomField>