force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__rel_1742275149970_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1742275149970_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramSite_InvestigatorId_map_H_rel</label>
    <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
    <relationshipLabel>CareProgramSite_InvestigatorId_map_H_rel</relationshipLabel>
    <relationshipName>rel_1742275149970_end</relationshipName>
    <type>Lookup</type>
</CustomField>