force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__ResearchStudyAgreeSignedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResearchStudyAgreeSignedDate__c</fullName>
    <label>Research Study Agreement Signed Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResearchStudyAgreeSignedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>