force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__ResearchStudyAgreeTrnarndDrtnNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResearchStudyAgreeTrnarndDrtnNumber__c</fullName>
    <label>Research Study Agree Turnaround Drtn</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResearchStudyAgreeTrnarndDrtnNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>