force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__RsrchStudyCmplPtcpCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__RsrchStudyCmplPtcpCount__c</fullName>
    <label>Research Study Completed Ptcp Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RsrchStudyCmplPtcpCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>