force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__ScreenedParticipantCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ScreenedParticipantCount__c</fullName>
    <label>Screened Participant Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ScreenedParticipantCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>