force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__SiteActivationDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__SiteActivationDate__c</fullName>
    <label>Site Activated Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SiteActivationDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>