force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__SiteActvToFirstPtcpDrtnNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SiteActvToFirstPtcpDrtnNumber__c</fullName>
    <label>Site Activation To First Ptcp Duration</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SiteActvToFirstPtcpDrtnNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>