force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__SiteActvToLastPtcpDrtnNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SiteActvToLastPtcpDrtnNumber__c</fullName>
    <label>Site Activation To Last Ptcp Duration</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SiteActvToLastPtcpDrtnNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>