force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__SiteCloseOutDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__SiteCloseOutDate__c</fullName>
    <label>Site Closed Out Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SiteCloseOutDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>