force-app/main/default/objects/ssot__CareProgramSite__dlm/fields/ssot__SponsorRepresentativeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SponsorRepresentativeId__c</fullName>
    <label>Sponsor Representative</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SponsorRepresentativeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>